<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/button"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textview1"
        android:layout_marginTop="5dp"
        android:background="@color/button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="50sp"
        android:gravity="end"
        android:textColor="@color/black"
        android:padding="20dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/clear"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:gravity="center"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="35sp"
            android:background="@drawable/background"
            android:textColor="@color/white"
            android:text="@string/clear"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/modulus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/background"
            android:text="@string/modulus"/>
        <ImageView
            android:layout_marginStart="15dp"
            android:id="@+id/back"
            android:padding="20dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/background"
            android:src="@drawable/backspace"
            android:contentDescription="@string/back"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/division"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background"
            android:textSize="35sp"
            android:text="@string/division"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/seven"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:background="@drawable/background"
            android:textColor="@color/white"
            android:text="@string/seven"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/eight"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:background="@drawable/background"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/eight"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/nine"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/background"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/nine"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/multiplication"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/multiplication"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/background"
            android:textColor="@color/white"
            android:text="@string/four"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/five"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:background="@drawable/background"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/five"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/six"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/background"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/six"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/subtract"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/subtract"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/one"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:background="@drawable/background"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/one"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/two"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:background="@drawable/background"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/two"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/three"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/background"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/three"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/add"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/add"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/zero"
            android:layout_width="155dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:background="@drawable/background2"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/zero"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/decimal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="35sp"
            android:background="@drawable/background"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/decimal"/>
        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/equal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/background"
            android:textSize="35sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/equal"/>
    </LinearLayout>
</LinearLayout>